src/objects/z_SObjectDescription__c.object
<CustomObject>
    <fields>
        <fullName>Lcm_Fields__c</fullName>
        <description>Anzahl Felder</description>
        <inlineHelpText>Anzahl Felder</inlineHelpText>
        <label>Fields</label>
        <summaryForeignKey>z_FieldDescription__c.z_SObjectDescription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lcm_LinkToObject__c</fullName>
        <description>Startseite des Objekts anzeigen</description>
        <formula>HYPERLINK(&apos;/&apos; +  keyPrefix__c ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Startseite des Objekts anzeigen</inlineHelpText>
        <label>Lcm_LinkToObject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAccessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCreateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCustomSetting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustomSetting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeltable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeltable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeprecatedAndHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeprecatedAndHidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFeedEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFeedEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMergeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMergeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isQueryable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isQueryable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSearchable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSearchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUndeletable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUndeletable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUpdateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUpdateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>keyPrefix__c</fullName>
        <label>keyPrefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>labelPlural__c</fullName>
        <label>labelPlural</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>label__c</fullName>
        <label>label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>localName__c</fullName>
        <label>localName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Object</label>
    <listViews>
        <fullName>Advendio</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Advendio__</value>
        </filters>
        <label>Advendio</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lcm_Fields__c</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Custom</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCustom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Advendio__</value>
        </filters>
        <label>Custom</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Hd</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>_hd</value>
        </filters>
        <label>Hd</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Lcm</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCustom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Lcm_</value>
        </filters>
        <label>Lcm</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>P7S1</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCustom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>P7S1_</value>
        </filters>
        <label>P7S1</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Som</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCustom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Som_</value>
        </filters>
        <label>Som</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCustom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>SomDig_</value>
        </filters>
        <label>SomDig</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomTv</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCustom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>SomTv_</value>
        </filters>
        <label>SomTv</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Standard_SF</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isCustom__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>__Feed</value>
        </filters>
        <label>Standard SF</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Thun_RTB</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>Lcm_LinkToObject__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>rtb</value>
        </filters>
        <label>Thun RTB</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Thun_temp</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>z</value>
        </filters>
        <label>Thun temp</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Ven</fullName>
        <columns>NAME</columns>
        <columns>keyPrefix__c</columns>
        <columns>label__c</columns>
        <columns>Lcm_LinkToObject__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isFeedEnabled__c</columns>
        <columns>isQueryable__c</columns>
        <columns>isSearchable__c</columns>
        <columns>isUpdateable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>ven_</value>
        </filters>
        <label>Ven</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Object</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>